gcc/testsuite/gcc.dg/pr14963.c
X Y(Z); /* { dg-error "" "error before" } */
/* { dg-warning "" "parameter names" { target *-*-* } 1 } */
/* { dg-warning "" "data definition" { target *-*-* } 1 } */
